<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/purple_500"
    android:padding="@dimen/space_10dp"
    android:transitionName="transation_login"
    tools:context=".sidebar.registration.LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/a_l_loginBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/space_5dp"
            android:src="@drawable/ic_arrow_back_white" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_25dp"
            android:text="@string/a_l_log_in"
            android:textAllCaps="true"
            android:textColor="@android:color/white"
            android:textSize="@dimen/text_size_30sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_30dp"
            android:background="@drawable/bg_white_corner"
            android:orientation="vertical"
            android:padding="@dimen/space_10dp"
            android:paddingBottom="@dimen/space_15dp">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/a_l_inputPhone"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/a_l_inputPhone"
                app:counterEnabled="true"
                app:counterMaxLength="11"
                app:errorEnabled="true"
                app:startIconDrawable="@drawable/ic_account_white">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/a_l_inputPassword"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/a_l_inputPassword"
                app:counterEnabled="true"
                app:counterMaxLength="15"
                app:errorEnabled="true"
                app:passwordToggleEnabled="true"
                app:startIconDrawable="@drawable/ic_password_24">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword" />
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/a_l_forgotPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:text="@string/a_l_forgotPassword"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/a_s_lgoinError"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/space_5dp"
                android:textColor="@android:color/holo_red_dark"
                android:textStyle="italic" />

            <Button
                android:id="@+id/a_l_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/space_30dp"
                android:layout_marginTop="@dimen/space_15dp"
                android:layout_marginEnd="@dimen/space_30dp"
                android:layout_marginBottom="@dimen/space_15dp"
                android:background="@drawable/bg_purple_500_corner"
                android:padding="@dimen/space_5dp"
                android:text="@string/a_l_login"
                android:textColor="@color/white" />
        </LinearLayout>

        <Button
            android:id="@+id/a_l_signup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:text="@string/a_l_signup"
            android:textColor="@android:color/white"
            android:transitionName="transation_signup" />
    </LinearLayout>

</ScrollView>